[package]
name = "dreamfield-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
cgmath = "0.18.0"
ncollide3d = "0.33.0"
byteorder = "1.4.3"
bevy_ecs = "0.8.1"
gltf = { version = "1.0", features = ["extras", "names", "KHR_lights_punctual"] }
include_dir = "0.7.2"
speedy = "0.8.3"
dreamfield_system = { git = "https://github.com/catchouli/dreamfield", tag="0.3.2" }
dreamfield_renderer = { git = "https://github.com/catchouli/dreamfield", tag="0.3.2" }
dreamfield_macros = { git = "https://github.com/catchouli/dreamfield", tag="0.3.2" }
dreamfield_traits = { git = "https://github.com/catchouli/dreamfield", tag="0.3.2" }

[build-dependencies]
dreamfield_system = { git = "https://github.com/catchouli/dreamfield", tag="0.3.2" }
speedy = "0.8.3"
